derive/test/compile_fail/ref_invalid_syntax.rs
use sval_derive::*;

#[derive(Value)]
#[sval(ref = "invalid")]
pub struct InvalidSyntax<'a> {
    a: &'a i32,
}

fn main() {}
